--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,7 +56,9 @@
 		"unordered_set": "cpp",
 		"regex": "cpp",
 		"valarray": "cpp",
-		"xstring": "cpp"
+		"xstring": "cpp",
+		"bit": "cpp",
+		"iomanip": "cpp"
 	},
 	"files.exclude": {
 		"**/.git": true,
@@ -66,4 +68,5 @@
 		"**/.DS_Store": true,
 		"**/*.exe": true,
 	},
+	"python.pythonPath": "D:\\Nospace\\anaconda3\\python.exe",
 }
